Ensure Fragment Comparison Waits on Async & CodeFragments Respect `@Blocking` (#1805)
* For the fragment comparison helper in `ContextSerializationTest`, fragments are first checked if they are async, and are waited on for max 10 seconds before comparing.
* CodeUnitFragment.text/syntaxStyle/files now actually block on computation